    * Sidebar snapin: show pending changes
    * New rule for configuring custom_checks - allowing to run arbitrary
      active checks even if not yet formalized (like HTTP and TCP)
    * Added automation_commands to make automations pluginable
    * New layout and new internal implementation of input forms
    * New layout for view overview and view editor
    * FIX: fix parent scan on single site installations
    * FIX: fix folder visibility permission handling
    * FIX: honor folder-permissions when creating, deleting 
           and modifiying rules
    * FIX: detect non-local site even if unix: is being used
    * FIX: better error message if not logged into site during 
           action that needs remote access
    * FIX: send automation data via POST not GET. This fixes inventory
           on hosts with more than 500 services.
    * FIX: make config options directly active after resetting them
           to their defaults (didn't work for start_url, etc.
    * FIX: Fixed editing of ListOf in valuespec editors (e.g. used in logwatch
    pattern editor)
    * FIX: Reimplemented correct behaviour of the logwatch pattern "ignore"
    state which is used to drop the matching log lines

    Multisite:
    * FIX: fixed filter of recent event views (4 hours didn't catch)
    * FIX: convert more buttons to new graphical style
    * FIX: Logwatch handles logs with only OK lines in it correctly in logfile list views
    * FIX: Fixed syntax error in "Single-Host Problems" view definition
    * New help button at top right of each page now toggles help texts
    * Snapin Custom Links allows to specify HTTP link target

    Mobile GUI:
    * FIX: commands can be executed again
    * FIX: fixed styling of buttons

    Checks & Agents:
    * FIX: Logwatch: fixed missing linebreak during reclassifing lines of logfiles
    * FIX: Logwatch: Logwatch services in rules configured using WATO must be
      given as item, not as whole service name