@@ -20,6 +20,7 @@
     * Added automation_commands to make automations pluginable
     * New layout and new internal implementation of input forms
     * New layout for view overview and view editor
+    * Split up host search in two distinct pages
     * FIX: fix parent scan on single site installations
     * FIX: fix folder visibility permission handling
     * FIX: honor folder-permissions when creating, deleting 
